styling to stop images from distorting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@ body {
 
 }
 
+img {
+    object-fit: cover;
+}
+
 footer {
     margin-top: 5%;
     height: 80px;
